--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>purify-redux-example</title>
         <meta charset="UTF-8" />
         <style>
             html {
@@ -12,13 +13,15 @@
                 justify-content: center;
                 font-family: sans-serif;
                 font-size: 2em;
-                background: url("../logo.png") center center no-repeat;
+                background-color: #231c34;
+                color: #ffffff;
                 align-items: center;
             }
         </style>
     </head>
     <body>
         <h1 id="temp">
+            Loading ...
         </h1>
     </body>
 </html>
